Order task list, display unattached tasks, style table

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -11,6 +11,20 @@
     tr:nth-child(even) {
       background: #f2f2f2;
     }
+
+    tr.invoiced {
+      background: green;
+          
+      td {
+        color: white;
+        a {
+         color:#92ddff;
+        }
+        label {
+          color: white;
+        }
+      }
+    }
   }
 
 }
